templates/function-orchestrator_template.yaml
---
# Source: function-orchestrator/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: function-orchestrator-release-name
  labels:
    app: function-orchestrator
    chart: function-orchestrator-0.3.2
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: function-orchestrator
      release: release-name
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
      - port: 6254
        protocol: TCP
      - port: 9100
        protocol: TCP      
  egress:
    - ports:
      - port: 6927
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app: function-evaluator
---
# Source: function-orchestrator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-orchestrator-release-name
  labels:
    app: function-orchestrator
    chart: function-orchestrator-0.3.2
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: function-orchestrator
    routed_via: release-name
  ports:
    - name: http
      targetPort: 6254
      port: 6254
---
# Source: function-orchestrator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: function-orchestrator-release-name
  labels:
    app: function-orchestrator
    chart: function-orchestrator-0.3.2
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: function-orchestrator
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: function-orchestrator
        release: release-name
        routed_via: release-name
      annotations:
        container.apparmor.security.beta.kubernetes.io/function-orchestrator-release-name: localhost/wikifunctions-orchestrator
        checksum/secrets: af2ff46f85ce050266a5fc3ca4188b53b77e2efd4062f98d76260c7b0e906b1c
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"        
    spec:
      automountServiceAccountToken: false
      containers:        
        # The main application container
        - name: function-orchestrator-release-name
          image: "docker-registry.wikimedia.org/repos/abstract-wiki/wikifunctions/function-orchestrator:versionNumberGoesHere"
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 6254
          livenessProbe:
            tcpSocket:
              port: 6254
          readinessProbe:
            httpGet:
              path: /_info
              port: 6254
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
                  
      volumes:        
          
        
        []
---
# Source: function-orchestrator/templates/ingress.yaml
---
---
# Source: function-orchestrator/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'function-orchestrator-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'function-orchestrator-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(FUNCTION_ORCHESTRATOR_RELEASE_NAME_SERVICE_HOST)', 'http://function-orchestrator-release-name:6254']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
